Fix network config focus issues

* Correctly focuses SSID or passphrase field
* Correctly enables 'connect' button as soon as valid input is typed
* Defaults 'Connect' button to disabled to avoid initial blink
* Sizes the dialog correctly when just a passphrase is required
* Uses the new dialogs correctly from the 'Network not available'
  screen in login/oobe.

Bug: 795718,797891,795715
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ie81d3c16db56d8a0c020da3e001f9118b638974b