ui/webui/resources/cr_components/chromeos/network/network_config_input.js
@@ -13,6 +13,8 @@ Polymer({
   properties: {
     label: String,
 
+    autofocus: Boolean,
+
     disabled: {
       type: Boolean,
       reflectToAttribute: true,
